26.3 port