@@ -1,16 +1,25 @@
 package baguchi.tofucraft.data;
 
-import net.minecraft.core.HolderLookup;
-import net.minecraft.data.PackOutput;
+import net.minecraft.core.registries.SingleRegistryBootstrap;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.CompletableFuture;
 
 public class TofuLootTableProvider {
-	public static LootTableProvider create(PackOutput p_250807_, CompletableFuture<HolderLookup.Provider> p_323798_) {
-		return new LootTableProvider(p_250807_, Set.of(), List.of(new LootTableProvider.SubProviderEntry(BlockLootTables::new, LootContextParamSets.BLOCK)), p_323798_);
+	private static final Set<ResourceKey<LootTable>> LOCATIONS = new HashSet<>();
+	private static final Set<ResourceKey<LootTable>> IMMUTABLE_LOCATIONS = Collections.unmodifiableSet(LOCATIONS);
+
+	public static SingleRegistryBootstrap<LootTable> create() {
+		return new LootTableProvider(LOCATIONS, List.of(new LootTableProvider.SubProviderEntry(BlockLootTables::new, LootContextParamSets.BLOCK)));
+	}
+
+	public static Set<ResourceKey<LootTable>> all() {
+		return IMMUTABLE_LOCATIONS;
 	}
 }
